--- a/Entregable/app/src/main/AndroidManifest.xml
+++ b/Entregable/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Cartel"></activity>
+        <activity android:name=".Calendario"></activity>
+        <activity android:name=".Favoritos" />
+        <activity android:name=".Cartel" />
         <activity android:name=".AddPeli" />
         <activity android:name=".ListadoCompleto" />
         <activity android:name=".MainActivity">
